syntax = "proto3";
package syft.core.common;

message CommonObject {
  syft.core.common.UID uid_object = 1;
  syft.core.common.ObjectWithID object_with_id_object = 2;
}

message ObjectWithID {
  string obj_type = 1;
  syft.core.common.UID id = 2;
}

message UID {
  string obj_type = 1;
  bytes value = 2;
  bool as_wrapper = 3;
}